[package]
name = "scripter"
version = "0.4.1"
authors = ["Jakub Stasiak <jakub@stasiak.at>"]
edition = "2018"
description = "A screenplay compiler"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jstasiak/scripter"
keywords = ["screenplay", "script", "LaTeX"]
categories = ["text-processing"]

[badges]
travis-ci = { repository = "jstasiak/scripter" }

[dependencies]
